--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="portrait">
-            <img src="portrait.img" alt="Portrait">
+            <img src="portrait.jpg" alt="Portrait">
         </div>
 
         <footer class="contact-info">
